# serrano-sdk

./: Jenkinsfile.groovy  README.md  build.yaml  main.py  requirements.txt  setup.cfg  setup.py
serrano_sdk/: __init__.py
serrano_sdk/enhanced_service_orchestrator/: client.py
serrano_sdk/pmds/: client.py
serrano_sdk/resource_orchestrator/: assignments.py  bundles.py  client.py  deployments.py  kernels.py  storage_policies.py
serrano_sdk/rot_api/: client.py
serrano_sdk/secure_storage/: client.py
serrano_sdk/telemetry/: client.py
tests/enhanced_service_orchestrator/: sdk_config.json  testclient.py
tests/pmds/: sdk_config.json  testclient.py
tests/resource_orchestrator/: client.py  sdk_config.json  testclient.py
tests/rot_api/: client.py  sdk_config.json  testclient.py
tests/secure_storage/: testclient.py
tests/telemetry/: testclient.py
