[metadata]
name = serrano-sdk
version = 0.1.0
author = Makis Karadimas
author_email = makis.karadimas@netcompany-intrasoft.com
description = SERRANO SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/serranoproject/wp6/serrano-sdk
project_urls =
    Bug Tracker = https://gitlab.com/serranoproject/wp6/serrano-sdk/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 

[options.packages.find]
where = src
